a bunch of little tweaks - smooth scrolling for footnote links - edit layout so resizing horizontally doesn't have any breaks/jumps - fix up list styles on about page - add underline styles to link hover - fix date text styles on projects, posts

--- a/app/global.css
+++ b/app/global.css
@@ -200,3 +200,7 @@ button,
 a {
   transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
 }
+
+html {
+  scroll-behavior: smooth;
+}
